[package]
name = "vil_vwfd"
version.workspace = true
edition = "2021"
description = "VIL VWFD Runtime — compile + execute VWFD workflows on vil_server. Source-available under Vastar Source Available License (VSAL) — see LICENSE-VSAL. Not published to crates.io; install from source."
license-file = "../../LICENSE-VSAL"
publish = false

[dependencies]
# VIL own engines
vil_expr = { version = "0.4", path = "../vil_expr" }
vil_rules = { version = "0.4", path = "../vil_rules" }
vil_validate_schema = { version = "0.4", path = "../vil_validate_schema" }

# VIL infrastructure (per dev plan §7)
vil_server_core = { version = "0.4", path = "../vil_server_core" }
vil_orm = { version = "0.4", path = "../vil_orm" }
vil_new_http = { version = "0.4", path = "../vil_new_http" }
vil_rt = { version = "0.4", path = "../vil_rt" }
vil_types = { version = "0.4", path = "../vil_types" }
bytes = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "process"] }

# WASM execution
wasmtime = { version = "24", optional = true }
wasmtime-wasi = { version = "24", optional = true }
vil_capsule = { version = "0.4", path = "../vil_capsule", optional = true, features = ["wasi"] }
vil_sidecar = { version = "0.4", path = "../vil_sidecar", optional = true }
vil_starlark = { version = "0.4", path = "../vil_starlark", optional = true }
# Sidecar execution (subprocess stdin/stdout, no external dep needed)
async-trait = { version = "0.1", optional = true }
bson = { version = "2.13", optional = true }

# Plugin loading (dlopen .so)
libloading = "0.8"

# Durability (per dev plan Phase 5)
redb = "2.1"

# VIL DB connectors (all optional)
vil_db_sqlx = { version = "0.4", path = "../vil_db_sqlx", optional = true, features = ["all"] }
vil_db_redis = { version = "0.4", path = "../vil_db_redis", optional = true }
vil_db_mongo = { version = "0.4", path = "../vil_db_mongo", optional = true }
vil_db_cassandra = { version = "0.4", path = "../vil_db_cassandra", optional = true }
vil_db_clickhouse = { version = "0.4", path = "../vil_db_clickhouse", optional = true }
vil_db_dynamodb = { version = "0.4", path = "../vil_db_dynamodb", optional = true }
vil_db_elastic = { version = "0.4", path = "../vil_db_elastic", optional = true }
vil_db_neo4j = { version = "0.4", path = "../vil_db_neo4j", optional = true }
vil_db_timeseries = { version = "0.4", path = "../vil_db_timeseries", optional = true, features = ["influxdb"] }

# VIL MQ connectors (all optional)
vil_mq_nats = { version = "0.4", path = "../vil_mq_nats", optional = true }
vil_mq_kafka = { version = "0.4", path = "../vil_mq_kafka", optional = true }
vil_mq_mqtt = { version = "0.4", path = "../vil_mq_mqtt", optional = true }
vil_mq_rabbitmq = { version = "0.4", path = "../vil_mq_rabbitmq", optional = true }
vil_mq_pulsar = { version = "0.4", path = "../vil_mq_pulsar", optional = true }
vil_mq_pubsub = { version = "0.4", path = "../vil_mq_pubsub", optional = true }
vil_mq_sqs = { version = "0.4", path = "../vil_mq_sqs", optional = true }

# VIL Storage connectors (all optional)
vil_storage_s3 = { version = "0.4", path = "../vil_storage_s3", optional = true }
vil_storage_gcs = { version = "0.4", path = "../vil_storage_gcs", optional = true }
vil_storage_azure = { version = "0.4", path = "../vil_storage_azure", optional = true }

# VIL Protocol connectors (all optional)
vil_soap = { version = "0.4", path = "../vil_soap", optional = true }
vil_modbus = { version = "0.4", path = "../vil_modbus", optional = true }
vil_opcua = { version = "0.4", path = "../vil_opcua", optional = true }
vil_ws = { version = "0.4", path = "../vil_ws", optional = true }

# VIL Triggers (all optional)
vil_trigger_core = { version = "0.4", path = "../vil_trigger_core", optional = true }
vil_trigger_cron = { version = "0.4", path = "../vil_trigger_cron", optional = true }
vil_trigger_iot = { version = "0.4", path = "../vil_trigger_iot", optional = true }
vil_trigger_cdc = { version = "0.4", path = "../vil_trigger_cdc", optional = true }
vil_trigger_fs = { version = "0.4", path = "../vil_trigger_fs", optional = true }
vil_trigger_email = { version = "0.4", path = "../vil_trigger_email", optional = true }
vil_trigger_evm = { version = "0.4", path = "../vil_trigger_evm", optional = true }
vil_trigger_webhook = { version = "0.4", path = "../vil_trigger_webhook", optional = true }
vil_trigger_kafka = { version = "0.4", path = "../vil_trigger_kafka", optional = true }
vil_trigger_s3 = { version = "0.4", path = "../vil_trigger_s3", optional = true }
vil_trigger_sftp = { version = "0.4", path = "../vil_trigger_sftp", optional = true }
vil_trigger_db_poll = { version = "0.4", path = "../vil_trigger_db_poll", optional = true }
vil_trigger_grpc = { version = "0.4", path = "../vil_trigger_grpc", optional = true }

[features]
default = []
# Connector groups
connectors-db = [
    "dep:vil_db_sqlx", "dep:vil_db_redis", "dep:vil_db_mongo",
    "dep:vil_db_cassandra", "dep:vil_db_clickhouse", "dep:vil_db_dynamodb",
    "dep:vil_db_elastic", "dep:vil_db_neo4j", "dep:vil_db_timeseries",
    "dep:bson",
]
connectors-mq = [
    "dep:vil_mq_nats", "dep:vil_mq_kafka", "dep:vil_mq_mqtt",
    "dep:vil_mq_rabbitmq", "dep:vil_mq_pulsar", "dep:vil_mq_pubsub", "dep:vil_mq_sqs",
]
connectors-storage = [
    "dep:vil_storage_s3", "dep:vil_storage_gcs", "dep:vil_storage_azure",
]
connectors-protocol = [
    "dep:vil_soap", "dep:vil_modbus", "dep:vil_opcua", "dep:vil_ws",
]
triggers = [
    "dep:vil_trigger_core", "dep:vil_trigger_cron", "dep:vil_trigger_iot",
    "dep:vil_trigger_cdc", "dep:vil_trigger_fs", "dep:vil_trigger_email",
    "dep:vil_trigger_evm", "dep:vil_trigger_webhook",
    "dep:vil_trigger_kafka", "dep:vil_trigger_s3", "dep:vil_trigger_sftp",
    "dep:vil_trigger_db_poll", "dep:vil_trigger_grpc",
]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:vil_capsule"]
sidecar = ["dep:vil_sidecar"]
compute-starlark = ["dep:vil_starlark"]
faas-core = ["vil_expr/faas-core"]
faas-full = ["vil_expr/faas-full"]
all = ["connectors-db", "connectors-mq", "connectors-storage", "connectors-protocol", "triggers", "wasm", "sidecar", "compute-starlark", "faas-full", "dep:async-trait"]

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "workflow_exec"
harness = false
